--- a/sass/components/header.sass
+++ b/sass/components/header.sass
@@ -1,1 +1,106 @@
 .header
+	padding: 30px 0
+	display: flex
+	justify-content: space-between
+	align-items: center
+	position: relative
+	&__logo-link
+		width: 60px
+		height: 60px
+	&__logo-svg
+		width: 100%
+		height: 100%
+		transition: $transition
+		&:hover
+			color: $color-lightblue
+	&__nav
+		padding: 0 25px
+		font-size: 0.875rem
+		font-weight: 400
+		line-height: 1.35em
+		max-width: 700px
+		width: 100%
+	&__list
+		display: flex
+		justify-content: space-between
+		align-items: center
+		list-style: none
+	&__item
+	&__link
+		transition: $transition
+		&:hover
+			color: $color-lightblue
+
+.burger__button
+	display: none
+	width: 30px
+	height: 20px
+	position: relative
+	span
+		position: absolute
+		width: 100%
+		height: 2px
+		background-color: $color-lightblue
+		top: 50%
+		transform: translateY(-50%)
+		transition: $transition
+	&::after,
+	&::before
+		content: ""
+		position: absolute
+		width: 100%
+		height: 2px
+		background-color: $color-lightblue
+		left: 0
+		transition: $transition
+	&::after
+		top: 0
+	&::before
+		top: calc(100% - 2px)
+
+.burger__button--active
+	span
+		opacity: 0
+	&::after
+		top: 50%
+		transform: rotate(135deg)
+	&::before
+		top: 50%
+		transform: rotate(-135deg)
+
+@media screen and ( max-width: 768px )
+	.header__button
+		margin-right: auto
+		margin-left: 20px
+	.burger__button
+		display: block
+	.header
+		padding: 15px 0
+		&__logo-link
+			width: 35px
+			height: 35px
+	.header__nav
+		overflow-y: auto
+		position: fixed
+		z-index: 100
+		top: 70px
+		right: 0
+		background-color: $color-darkblue
+		max-height: calc(100% - 90px)
+		width: 40%
+		min-width: 200px
+		padding: 0
+		box-shadow: -4px 4px 8px 8px rgba(0, 0, 0, 0.25)
+		transform: translateX(100vw)
+		transition: $transition
+	.header__list
+		width: 100%
+		padding-bottom: 15px
+		flex-direction: column
+	.header__item
+		width: 90%
+		text-align: center
+		padding: 10px 0
+		border-bottom: 1px solid $color-lightblue
+	.header__nav--opened
+		transform: translateX(0)
