--- a/sass/utils/global.sass
+++ b/sass/utils/global.sass
@@ -63,6 +63,7 @@ svg path
 
 a
 	color: inherit
+	text-decoration: none
 
 body,
 html
@@ -71,6 +72,9 @@ html
 	background: $color-darkblue
 	@include font('proximanova', 16, 300)
 	line-height: 1.4
+
+.scroll-lock
+	overflow: hidden
 
 .wrapper
 	@include container($container)
@@ -109,7 +113,8 @@ html
 	letter-spacing: 1px
 	border: none
 	cursor: pointer
-	transition: transform 0.3s ease-in-out, border-radius 0.3s ease-in-out
+	transition: all 0.3s ease-in-out
+	white-space: nowrap
 	&--blue
 		color: $color-white
 		background: $color-lightblue
@@ -120,3 +125,6 @@ html
 		transform: scale(1.2)
 		border-radius: 15px
 		animation: fadeAnimation 0.3s ease-in-out
+	&:active
+		transform: scale(1.2) translateY(2px)
+		box-shadow: 4px 4px 2px 0px rgba(34, 60, 80, 0.5) inset
