created first screen

--- a/sass/style.sass
+++ b/sass/style.sass
@@ -9,15 +9,6 @@
 @import utils/mixins
 @import utils/global
 @import components/header
+@import components/first-screen
 @import components/footer
 
-.nova1
-	@include font('proximanova', 50, 300)
-.nova2
-	@include font('proximanova', 50, 400)
-.nova3
-	@include font('proximanova', 50, 600)
-.nova4
-	@include font('proximanova', 50, 700)
-.missuri
-	@include font('El Messiri', 50, 700)
