created seases section

--- a/pug/index.pug
+++ b/pug/index.pug
@@ -10,6 +10,10 @@ html(lang="ru")
 	body
 		.wrapper
 			include components/header
+
 			include components/first-screen
+			
+			include components/seanses
+
 			include components/footer
 		script(src='js/app.min.js')
