--- a/sass/components/first-screen.sass
+++ b/sass/components/first-screen.sass
@@ -1,8 +1,7 @@
 .first-screen
 	@include background('@img/girl-light.jpg', cover)
-	// min-height: 31.25vw
-	// height: 600px
 	padding-bottom: 16.71%
+	margin-top: 5%
 	border-radius: 10px
 	display: flex
 	flex-direction: column
