--- a/sass/style.sass
+++ b/sass/style.sass
@@ -10,5 +10,5 @@
 @import utils/global
 @import components/header
 @import components/first-screen
+@import components/seanses
 @import components/footer
-
