created reviews section

--- a/pug/index.pug
+++ b/pug/index.pug
@@ -3,6 +3,7 @@ html(lang="ru")
 	head
 		include utils/mixins
 		include utils/meta
+		link(rel="stylesheet", href="https://unpkg.com/swiper@8/swiper-bundle.min.css")
 		link(rel="stylesheet", href="css/style.min.css")
 		link(rel="shortcut icon", href="files/favicon.ico")
 		include utils/fonts
@@ -12,8 +13,10 @@ html(lang="ru")
 			include components/header
 
 			include components/first-screen
-			
+
 			include components/seanses
+			
+			include components/reviews
 
 			include components/footer
 		script(src='js/app.min.js')
