--- a/sass/style.sass
+++ b/sass/style.sass
@@ -11,4 +11,5 @@
 @import components/header
 @import components/first-screen
 @import components/seanses
+@import components/reviews
 @import components/footer
