created about section and fixed bugs + improve adaptability

--- a/pug/components/seanses.pug
+++ b/pug/components/seanses.pug
@@ -13,5 +13,5 @@ section.seanses
 		+svg('leaf leaf--right', 'leaf--right')
 	.seanses__grid
 		each item in seansesItems
-			a.seanses__grid-item(href='#')
-				h4.seanses__grid-title= item
+			a.seanses__grid-item.item(href='#')
+				h4.seanses__grid-title.item__title= item
