--- a/pug/index.pug
+++ b/pug/index.pug
@@ -18,5 +18,7 @@ html(lang="ru")
 			
 			include components/reviews
 
+			include components/about
+
 			include components/footer
 		script(src='js/app.min.js')
