--- a/sass/style.sass
+++ b/sass/style.sass
@@ -12,4 +12,5 @@
 @import components/first-screen
 @import components/seanses
 @import components/reviews
+@import components/about
 @import components/footer
