--- a/sass/components/reviews.sass
+++ b/sass/components/reviews.sass
@@ -1,10 +1,11 @@
 .reviews
 	margin-top: 10%
-	padding-bottom: 100px
 	display: flex
 	justify-content: center
 	align-items: center
 	flex-direction: column
+	@media screen and ( max-width: 768px )
+		margin-top: 60px
 	&__title
 		margin-bottom: 7.5%
 	&__swiper
@@ -19,6 +20,7 @@
 			transition: $transition
 			opacity: 0.4
 			transform: scale(0.8)
+			cursor: grab
 			-ms-overflow-style: none
 			scrollbar-width: none
 			&::-webkit-scrollbar
