--- a/sass/components/seanses.sass
+++ b/sass/components/seanses.sass
@@ -4,6 +4,8 @@
 	justify-content: center
 	align-items: center
 	flex-direction: column
+	@media screen and ( max-width: 768px )
+		margin-top: 60px
 	&__grid
 		margin-top: 7.5%
 		min-height: 540px
@@ -17,21 +19,10 @@
 			grid-template-columns: repeat(1, 1fr)
 		&-item
 			@include background('@img/cell-background.jpg', cover)
-			border-radius: 12px
-			padding: 30px 40px
 			display: flex
 			align-items: flex-end
-			transition: $transition
-			@media screen and ( min-width: 1023.98px )
-				&:hover
-					transform: perspective(500px) translateZ(50px)
-					box-shadow: 0px 0px 30px 20px rgba(0,0,0, 0.5)
 			&:first-child
 				grid-row: 1/3
 				@media screen and ( max-width: 1200px )
 					grid-row: 1/2
 		&-title
-			@include font('El Messiri', 24, 700)
-			line-height: 140%
-			@media screen and ( max-width: 768px )
-				font-size: 18px
