--- a/sass/utils/global.sass
+++ b/sass/utils/global.sass
@@ -134,3 +134,17 @@ html
 		&:active
 			transform: scale(1.2) translateY(2px)
 			box-shadow: 4px 4px 2px 0px rgba(34, 60, 80, 0.5) inset
+
+.item
+	border-radius: 12px
+	padding: 30px 40px
+	transition: $transition
+	@media screen and ( min-width: 1023.98px )
+		&:hover
+			transform: perspective(500px) translateZ(50px)
+			box-shadow: 0px 0px 30px 20px rgba(0,0,0, 0.5)
+	&__title
+		@include font('El Messiri', 24, 700)
+		line-height: 140%
+		@media screen and ( max-width: 768px )
+			font-size: 18px
