created prices section

--- a/pug/index.pug
+++ b/pug/index.pug
@@ -20,5 +20,7 @@ html(lang="ru")
 
 			include components/about
 
+			include components/prices
+
 			include components/footer
 		script(src='js/app.min.js')
