--- a/sass/style.sass
+++ b/sass/style.sass
@@ -13,4 +13,5 @@
 @import components/seanses
 @import components/reviews
 @import components/about
+@import components/prices
 @import components/footer
