created address section

--- a/pug/index.pug
+++ b/pug/index.pug
@@ -22,5 +22,7 @@ html(lang="ru")
 
 			include components/prices
 
+			include components/address
+
 			include components/footer
 		script(src='js/app.min.js')
