--- a/sass/style.sass
+++ b/sass/style.sass
@@ -14,4 +14,5 @@
 @import components/reviews
 @import components/about
 @import components/prices
+@import components/address
 @import components/footer
