added yandex map

--- a/SI_components/templates/swiper/swiper.pug
+++ b/SI_components/templates/swiper/swiper.pug
@@ -1,6 +1,7 @@
 //- Пример pug-структуры
+link(rel="stylesheet", href="https://unpkg.com/swiper@8/swiper-bundle.min.css")
 
-.swiper
+.класс
 	.swiper-wrapper
 		.swiper-slide 111111111111111
 		.swiper-slide 222222222222222
