--- a/pug/components/address.pug
+++ b/pug/components/address.pug
@@ -19,7 +19,7 @@ section.address
 		+svg('leaf leaf--left', 'leaf--left')
 		+svg('leaf leaf--right', 'leaf--right')
 	.address__grid
-		.address__map
+		.address__map#address__map
 		each item in addressesList
 			.address__item
 				.address__item-content
