--- a/pug/components/footer.pug
+++ b/pug/components/footer.pug
@@ -1,1 +1,5 @@
 footer.footer
+	.footer__copyright © 2018-2022 RitmStyle
+	.footer__madeby Made by ISV
+		a.footer__madeby-link(href="https://github.com/SergeyTheHuman" target="_blank")
+			+svg('footer__madeby-github', 'github')
