--- a/pug/index.pug
+++ b/pug/index.pug
@@ -25,4 +25,5 @@ html(lang="ru")
 			include components/address
 
 			include components/footer
+		script(src="https://api-maps.yandex.ru/2.1/?apikey=e2a57b7e-656f-493c-941e-fb1a44daefc4&lang=ru_RU")
 		script(src='js/app.min.js')
