--- a/sass/utils/global.sass
+++ b/sass/utils/global.sass
@@ -148,3 +148,6 @@ html
 		line-height: 140%
 		@media screen and ( max-width: 768px )
 			font-size: 18px
+
+[class*="copyrights-pane"]
+	display: none !important
