--- a/sass/components/address.sass
+++ b/sass/components/address.sass
@@ -1,5 +1,4 @@
 .address
-	padding-bottom: 100px
 	margin-top: 10%
 	display: flex
 	justify-content: center
@@ -22,8 +21,9 @@
 		@media screen and ( max-width: 600px )
 			grid-template-columns: 1fr
 			grid-auto-rows: auto
+			padding-bottom: 35px
 	&__map
-		background-color: tomato
+		overflow: hidden
 		border-radius: 10px
 		grid-column: span 2
 		grid-row: span 2
