--- a/sass/style.sass
+++ b/sass/style.sass
@@ -15,4 +15,7 @@
 @import components/about
 @import components/prices
 @import components/address
+@import components/news
+@import components/blog
+@import components/post
 @import components/footer
