--- a/sass/components/footer.sass
+++ b/sass/components/footer.sass
@@ -4,6 +4,7 @@
 	justify-content: space-between
 	align-items: center
 	padding-bottom: 30px
+	position: relative
 	@media screen and ( max-width: 768px )
 		margin-top: 35px
 	&__copyright
@@ -50,3 +51,14 @@
 	100%
 		color: currentColor
 		transform: scale(1) rotate(0deg)
+
+._lines	.footer
+	&::after
+		content: ''
+		width: 100%
+		height: 1px
+		background-color: $color-white
+		opacity: .5
+		position: absolute
+		top: -20px
+		left: 0
