--- a/sass/components/header.sass
+++ b/sass/components/header.sass
@@ -106,3 +106,14 @@
 		border-bottom: 1px solid $color-lightblue
 	.header__nav--opened
 		transform: translateX(0)
+
+._lines	.header
+	&::after
+		content: ''
+		width: 100%
+		height: 1px
+		background-color: $color-white
+		opacity: .5
+		position: absolute
+		bottom: 0
+		left: 0
