added modal window, made menu navigation, added form validation

--- a/pug/blog-page.pug
+++ b/pug/blog-page.pug
@@ -14,6 +14,8 @@ html(lang="ru")
 
 			include components/blog
 
+			include components/modal
+			
 			include components/footer
 		script(src="https://api-maps.yandex.ru/2.1/?apikey=e2a57b7e-656f-493c-941e-fb1a44daefc4&lang=ru_RU")
 		script(src='js/app.min.js')
