--- a/pug/components/about.pug
+++ b/pug/components/about.pug
@@ -17,7 +17,7 @@
 		},
 	]
 
-section.about
+section.about#about
 	h2.about__title.title Об RitmStyle
 		+svg('leaf leaf--left', 'leaf--left')
 		+svg('leaf leaf--right', 'leaf--right')
