--- a/pug/components/blog.pug
+++ b/pug/components/blog.pug
@@ -33,4 +33,4 @@ section.blog
 					.blog__item-date.date= post.date
 					h4.blog__item-title= post.title
 					.blog__item-text= post.text
-					a(href='single-post.html').blog__item-btn.btn.btn--blue Читать статью
+					a(href='post-page.html').blog__item-btn.btn.btn--blue Читать статью
