--- a/pug/components/reviews.pug
+++ b/pug/components/reviews.pug
@@ -27,7 +27,7 @@
 	]
 
 
-section.reviews
+section.reviews#reviews
 	.reviews__title.title Отзывы
 		+svg('leaf leaf--left', 'leaf--left')
 		+svg('leaf leaf--right', 'leaf--right')
