--- a/pug/post-page.pug
+++ b/pug/post-page.pug
@@ -13,6 +13,8 @@ html(lang="ru")
 			include components/header
 
 			include components/post
+			
+			include components/modal
 
 			include components/footer
 		script(src="https://api-maps.yandex.ru/2.1/?apikey=e2a57b7e-656f-493c-941e-fb1a44daefc4&lang=ru_RU")
