--- a/pug/components/header.pug
+++ b/pug/components/header.pug
@@ -3,7 +3,7 @@
 		{
 			text: 'Главная',
 			dataPath: '',
-			link: '/'
+			link: 'index.html'
 		},
 		{
 			text: 'Сеансы',
@@ -38,7 +38,7 @@
 	]
 
 header.header
-	a.header__logo-link(href="/")
+	a.header__logo-link(href="index.html")
 		+svg('header__logo-svg', 'logo')
 	nav.header__nav
 		ul.header__list
