--- a/sass/components/modal.sass
+++ b/sass/components/modal.sass
@@ -80,6 +80,8 @@
 		line-height: 140%
 		opacity: .8
 	&__button
+		position: relative
+		z-index: 100
 		@media screen and ( min-width: 1023.98px )
 			&:hover
 				transform: scale(1) !important
