--- a/pug/components/footer.pug
+++ b/pug/components/footer.pug
@@ -1,5 +1,5 @@
 footer.footer
-	.footer__copyright © 2018-2022 RitmStyle
-	.footer__madeby Made by ISV
+	.footer__copyright(data-aos="fade-right" data-aos-delay=200 data-aos-anchor-placement="top-bottom") © 2018-2022 RitmStyle
+	.footer__madeby(data-aos="fade-left" data-aos-delay=200 data-aos-anchor-placement="top-bottom") Made by ISV
 		a.footer__madeby-link(href="https://github.com/SergeyTheHuman" target="_blank")
 			+svg('footer__madeby-github', 'github')
