--- a/pug/components/post.pug
+++ b/pug/components/post.pug
@@ -1,11 +1,11 @@
 section.post
-	.post__title.title Новый формат сеансов
+	.post__title.title(data-aos="fade-up") Новый формат сеансов
 		+svg('leaf leaf--left', 'leaf--left')
 		+svg('leaf leaf--right', 'leaf--right')
-	.post__item
-		.post__item-content
-			.post__item-date.date 13.02.2022
-			h4.post__item-title Новый формат сеансов
-			.post__item-text Lorem ipsum dolor sit amet, consectetur adipiscing elit. Eget massa vitae tempus at pretium lacus viverra. Vitae libero vivamus quis enim quam vitae dictumst nulla duis. Sed nisl nibh et morbi tristique suspendisse morbi. Consequat facilisi tortor consectetur magnis odio. Risus, aenean tortor cras consectetur lacus, ut erat ac et. Fermentum aliquam ac egestas eget risus a. Maecenas sed pellentesque bibendum vitae at praesent sed. Amet pretium arcu gravida arcu ut dui sem quis id. Tristique in leo donec proin odio eget. Neque ut in egestas lacus sit nunc, nec. Proin mattis augue sit leo sagittis nam id accumsan. Pulvinar nunc fermentum vulputate ultrices pulvinar sed ultrices quis. Tempor facilisis tellus ac, odio. A amet congue tristique nibh malesuada lectus. Purus quam dapibus rhoncus iaculis amet tristique. Mattis fusce lorem fames mauris orci rhoncus, amet fringilla. Quis integer vitae at vitae urna etiam sed eu sit.Vitae turpis ullamcorper habitant fermentum aliquet volutpat. 
-		.post__item-image
+	.post__item(data-aos="zoom-in" data-aos-delay=200)
+		.post__item-content(data-aos="fade-right" data-aos-delay=400)
+			.post__item-date.date(data-aos="fade-right" data-aos-delay=550) 13.02.2022
+			h4.post__item-title(data-aos="fade-right" data-aos-delay=700) Новый формат сеансов
+			.post__item-text(data-aos="fade-right" data-aos-delay=850) Lorem ipsum dolor sit amet, consectetur adipiscing elit. Eget massa vitae tempus at pretium lacus viverra. Vitae libero vivamus quis enim quam vitae dictumst nulla duis. Sed nisl nibh et morbi tristique suspendisse morbi. Consequat facilisi tortor consectetur magnis odio. Risus, aenean tortor cras consectetur lacus, ut erat ac et. Fermentum aliquam ac egestas eget risus a. Maecenas sed pellentesque bibendum vitae at praesent sed. Amet pretium arcu gravida arcu ut dui sem quis id. Tristique in leo donec proin odio eget. Neque ut in egestas lacus sit nunc, nec. Proin mattis augue sit leo sagittis nam id accumsan. Pulvinar nunc fermentum vulputate ultrices pulvinar sed ultrices quis. Tempor facilisis tellus ac, odio. A amet congue tristique nibh malesuada lectus. Purus quam dapibus rhoncus iaculis amet tristique. Mattis fusce lorem fames mauris orci rhoncus, amet fringilla. Quis integer vitae at vitae urna etiam sed eu sit.Vitae turpis ullamcorper habitant fermentum aliquet volutpat. 
+		.post__item-image(data-aos="fade-left" data-aos-delay=400)
 			img(src='@img/post-img.jpg').post__item-img
