--- a/pug/news-page.pug
+++ b/pug/news-page.pug
@@ -3,9 +3,7 @@ html(lang="ru")
 	head
 		include utils/mixins
 		include utils/meta
-		link(rel="stylesheet", href="https://unpkg.com/swiper@8/swiper-bundle.min.css")
-		link(rel="stylesheet", href="css/style.min.css")
-		link(rel="shortcut icon", href="files/favicon.ico")
+		include utils/links
 		include utils/fonts
 		title News Page
 	body
@@ -17,5 +15,4 @@ html(lang="ru")
 			include components/modal
 
 			include components/footer
-		script(src="https://api-maps.yandex.ru/2.1/?apikey=e2a57b7e-656f-493c-941e-fb1a44daefc4&lang=ru_RU")
-		script(src='js/app.min.js')
+		include utils/scripts
