--- a/sass/components/news.sass
+++ b/sass/components/news.sass
@@ -24,6 +24,8 @@
 			grid-template-columns: 1fr
 	&__item
 		@include background('@img/cell-background.jpg', cover)
+		height: 100%
+		width: 100%
 		display: flex
 		justify-content: space-between
 		flex-direction: column
