--- a/pug/components/first-screen.pug
+++ b/pug/components/first-screen.pug
@@ -1,5 +1,5 @@
-section.first-screen
-	h2.first-screen__subtitle.title Укрепление здоровья
+section.first-screen(data-aos="fade-down" data-aos-delay=700)
+	h2(data-aos="fade-down" data-aos-delay=900).first-screen__subtitle.title Укрепление здоровья
 		+svg('leaf leaf--left', 'leaf--left')
 		+svg('leaf leaf--right', 'leaf--right')
-	h1.first-screen__title Акватерапия #[br]RitmStyle
+	h1(data-aos="fade-down" data-aos-delay=1100).first-screen__title Акватерапия #[br]RitmStyle
