--- a/sass/components/header.sass
+++ b/sass/components/header.sass
@@ -4,15 +4,20 @@
 	justify-content: space-between
 	align-items: center
 	position: relative
-	&__logo-link
+	&__logo-wrapper
 		width: 60px
 		height: 60px
+	&__logo-link
+		display: inline-block
+		width: 100%
+		height: 100%
 	&__logo-svg
 		width: 100%
 		height: 100%
 		transition: $transition
 		&:hover
 			color: $color-lightblue
+			transform: scale(1.2)
 	&__nav
 		padding: 0 25px
 		font-size: 0.875rem
@@ -29,9 +34,12 @@
 		&:not(:last-child)
 			margin-right: 5%
 	&__link
+		display: inline-block
 		transition: $transition
-		&:hover
-			color: $color-lightblue
+		@media screen and ( min-width: 1023.98px )
+			&:hover
+				color: $color-lightblue
+				transform: scale(1.2)
 
 .burger__button
 	display: none
@@ -71,14 +79,14 @@
 		transform: rotate(-135deg)
 
 @media screen and ( max-width: 768px )
-	.header__button
+	.header__button-wrapper
 		margin-right: auto
 		margin-left: 20px
 	.burger__button
 		display: block
 	.header
 		padding: 15px 0
-		&__logo-link
+		&__logo-wrapper
 			width: 35px
 			height: 35px
 	.header__nav
