--- a/sass/components/seanses.sass
+++ b/sass/components/seanses.sass
@@ -17,11 +17,14 @@
 			grid-template-columns: repeat(2, 1fr)
 		@media screen and ( max-width: 768px )
 			grid-template-columns: repeat(1, 1fr)
-		&-item
-			@include background('@img/cell-background.jpg', cover)
-			display: flex
-			align-items: flex-end
+		&-wrapper
 			&:first-child
 				grid-row: 1/3
 				@media screen and ( max-width: 1200px )
 					grid-row: 1/2
+		&-item
+			@include background('@img/cell-background.jpg', cover)
+			height: 100%
+			width: 100%
+			display: flex
+			align-items: flex-end
