--- a/sass/components/seanses.sass
+++ b/sass/components/seanses.sass
@@ -23,7 +23,10 @@
 				@media screen and ( max-width: 1200px )
 					grid-row: 1/2
 		&-item
-			@include background('@img/cell-background.jpg', cover)
+			background-image: linear-gradient(0deg, rgb(0, 0, 0) 10%, transparent), url('@img/cell-background.jpg')
+			background-position: center
+			background-size: cover, cover
+			background-repeat: no-repeat
 			height: 100%
 			width: 100%
 			display: flex
